# densevsmoe

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-09-densevsmoe-viz.md
docs/superpowers/specs/: 2026-07-09-densevsmoe-viz-design.md  2026-07-09-expert-identity-colors-design.md  2026-07-09-generation-viz-design.md
server/: extract.py  main.py  models.py
static/: app.js  index.html  style.css  viz.js
tests/: conftest.py  test_api.py  test_e2e.py  test_extract.py  test_integration.py  test_models.py
