[project]
name = "densevsmoe"
version = "0.1.0"
description = "Dense vs MoE 推論視覺化"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "torch>=2.9",
    "transformers>=4.51",
    "accelerate>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-playwright>=0.5",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
markers = [
    "model: 需下載並實跑模型",
    "e2e: 需啟動伺服器與瀏覽器",
]
addopts = "-m 'not e2e'"
